crates/rs/src/snapshots/sprefa_rs__tests__fn_declarations.snap
---
source: crates/rs/src/lib.rs
expression: refs
---
- value: hello
  span_start: 7
  span_end: 12
  kind: rs_declare
  rule_name: rs
  is_path: false
  parent_key: ~
  node_path: ~
- value: private
  span_start: 21
  span_end: 28
  kind: rs_declare
  rule_name: rs
  is_path: false
  parent_key: ~
  node_path: ~
