crates/rs/src/snapshots/sprefa_rs__tests__glob_use.snap
---
source: crates/rs/src/lib.rs
expression: refs
---
- value: "std::collections::*"
  span_start: 4
  span_end: 23
  kind: rs_use
  rule_name: rs
  is_path: false
  parent_key: ~
  node_path: ~
