crates/rs/src/snapshots/sprefa_rs__tests__grouped_use.snap
---
source: crates/rs/src/lib.rs
expression: refs
---
- value: "std::io"
  span_start: 4
  span_end: 12
  kind: rs_use
  rule_name: rs
  is_path: false
  parent_key: ~
  node_path: ~
- value: "std::fmt::Display"
  span_start: 4
  span_end: 26
  kind: rs_use
  rule_name: rs
  is_path: false
  parent_key: ~
  node_path: ~
