crates/rs/src/snapshots/sprefa_rs__tests__nested_grouped_use.snap
---
source: crates/rs/src/lib.rs
expression: refs
---
- value: "std::io"
  span_start: 4
  span_end: 19
  kind: rs_use
  rule_name: rs_use
  is_path: false
  parent_key: ~
  node_path: ~
  group: 0
- value: "std::io::Write"
  span_start: 4
  span_end: 26
  kind: rs_use
  rule_name: rs_use
  is_path: false
  parent_key: ~
  node_path: ~
  group: 1
- value: "std::fmt"
  span_start: 4
  span_end: 32
  kind: rs_use
  rule_name: rs_use
  is_path: false
  parent_key: ~
  node_path: ~
  group: 2
