crates/rs/src/snapshots/sprefa_rs__tests__struct_and_enum.snap
---
source: crates/rs/src/lib.rs
expression: refs
---
- value: Foo
  span_start: 7
  span_end: 10
  kind: rs_declare
  rule_name: rs
  is_path: false
  parent_key: ~
  node_path: ~
- value: Bar
  span_start: 19
  span_end: 22
  kind: rs_declare
  rule_name: rs
  is_path: false
  parent_key: ~
  node_path: ~
