crates/rs/src/snapshots/sprefa_rs__tests__trait_with_items.snap
---
source: crates/rs/src/lib.rs
expression: refs
---
- value: MyTrait
  span_start: 6
  span_end: 13
  kind: rs_declare
  rule_name: rs
  is_path: false
  parent_key: ~
  node_path: ~
- value: method
  span_start: 23
  span_end: 29
  kind: rs_declare
  rule_name: rs
  is_path: false
  parent_key: ~
  node_path: ~
- value: Output
  span_start: 47
  span_end: 53
  kind: rs_declare
  rule_name: rs
  is_path: false
  parent_key: ~
  node_path: ~
