crates/rs/src/snapshots/sprefa_rs__tests__use_rename.snap
---
source: crates/rs/src/lib.rs
expression: refs
---
- value: "std::io::Result"
  span_start: 4
  span_end: 19
  kind: rs_use
  rule_name: rs_use
  is_path: false
  parent_key: ~
  node_path: ~
  group: 0
